crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: Cannot specified keys and seeds at the same time.
  --> tests/constraints/init_seeds_keys.fail.rs:28:9
   |
28 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
